# SharipovAI

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  CONSTITUTION.md  CONSTITUTION_PHASE12_AMENDMENT.md  CONSTITUTION_PHASE8_AMENDMENT.md  Dockerfile  README.md  README_LIVE_READINESS.md  SharipovAI_Update.cmd  agent_health.py  ai_architecture_registry.py  ai_chat_orchestrator.py  ai_evidence.py  architecture_registry.py  capital_allocation.py  conftest.py  docker-compose.yml  general_controller.py  hello.py  learning_engine_v2.py  market_paper_engine.py  meta_ai.py  meta_ai_adapter.py  meta_ai_persistence.py  operations_ai.py  paper_activity_autorun.py  paper_activity_engine.py  persistence_paths.py  profitability_gate.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup-local-auth.ps1  sharipovai_constitution.py  sitecustomize.py  system_ai_auditor.py  (+8 more)
.ci-data/: bot_communication.sqlite3
.ci-results/: isolated.json
.github/: ci-diagnose.txt  ci-verification.txt
.phase12-patch/: 00.diff
agents/: __init__.py  exceptions.py  market_agent.py  models.py
ai_core/: __init__.py  ai_core.py  exceptions.py  models.py
analysis/: __init__.py  factor_engine.py  market_analyzer.py  scoring.py  signal_engine.py
audit/: phase11_production_audit.py
autonomous_trading/: __init__.py  canonical_runtime.py  council_loop.py  council_provider.py  evidence_integrity.py  execution_journal.py  loop.py  market_stream.py  power_resilience.py  shadow_bridge.py  shadow_mode.py  shared_market_stream.py  stage_controller.py  (+4 more)
(+959 files in other folders)
